--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>JURASSIC DIRT BIRTHDAY BASH!</title>
+  <link href="https://fonts.googleapis.com/css2?family=Comic+Neue&display=swap" rel="stylesheet"> 
   <style>
     body {
       margin: 0;
-      font-family: 'Comic Sans MS', cursive, sans-serif;
+      font-family: 'Comic Neue', cursive, sans-serif;
       background: url('https://wallpapercave.com/wp/wp3891508.jpg') no-repeat center center fixed;
       background-size: cover;
       color: #fff;
