--- a/index.html
+++ b/index.html
@@ -111,17 +111,19 @@
 <body>
 
   <!-- Background Sound -->
+  <button onclick="document.getElementById('roar').play()">Play Roar</button>
+  <audio id="roar" loop>
   <audio autoplay loop>
     <source src="https://cdn.pixabay.com/download/audio/2022/03/31/audio_28e4d92d93.mp3?filename=tyrannosaurus-rex-roar-111598.mp3" type="audio/mpeg">
     Your browser does not support the audio element.
   </audio>
 
   <div class="container">
-    <h1>🦖 JURASSIC DIRT BIRTHDAY BASH! 🏍️</h1>
+    <h1>🦖 JURASSIC BIRTHDAY BASH! 🏍️</h1>
     <div class="emoji">🦕🏍️🦖</div>
     <div class="info">
       <p>You're invited to <strong>Muaadth's 7th Birthday Party!</strong></p>
-      <p>Join us for a ROARING adventure and high-speed dirt bike fun!</p>
+      <p>Join us for a ROARING adventure of fun!</p>
       <p><strong>Date:</strong> Saturday, August 9th</p>
       <p><strong>Time:</strong> 12:00 PM – 5:00 PM</p>
       <p><strong>Place:</strong> 57 Calendula Drive, Malabar</p>
