--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>JURASSIC DIRT BIRTHDAY BASH!</title>
+  <title>MUAADTH'S JURASSIC BIRTHDAY BASH!</title>
   <link href="https://fonts.googleapis.com/css2?family=Comic+Neue&display=swap" rel="stylesheet"> 
   <style>
     body {
