--- a/index.html
+++ b/index.html
@@ -26,12 +26,13 @@
 
     .container {
       background-color: rgba(0, 0, 0, 0.75);
-      padding: 30px 20px;
+      padding: 40px 20px;
       border-radius: 15px;
       display: inline-block;
       max-width: 90%;
       width: 100%;
       box-sizing: border-box;
+      margin: 20px 0
     }
 
     .emoji {
